default/objects/Mapping_Condition__c/Mapping_Condition__c.object-meta.xml
<CustomObject>
    <label>Condition</label>
    <nameField>
        <displayFormat>MC-{0000}</displayFormat>
        <label>Mapping Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>