default/objects/Mapping_Condition__c/fields/Condition_Group__c.field-meta.xml
<CustomField>
    <fullName>Condition_Group__c</fullName>
    <label>Condition Group</label>
    <referenceTo>Mapping_Condition_Group__c</referenceTo>
    <relationshipLabel>Conditions</relationshipLabel>
    <relationshipName>Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>