default/objects/Mapping_Condition__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>